Add some explanation of internal links

--- a/Instructions of markdown on the jupyter.ipynb
+++ b/Instructions of markdown on the jupyter.ipynb
@@ -309,7 +309,8 @@
     "This is used for link to a section inside the notebook. You need to add a section ID right above the section title using this code: <br>\n",
     "__`<a id=\"section_ID\"></a>`__ <br>\n",
     "Make sure section_ID is unique across the whole notebook where you add the code. And test the link first before release.\n",
-    "When click the link showed by this code, you will jump to the section with showing the exact section at very top of the screen."
+    "When click the link showed by following code, you will jump to the section with showing the exact section at very top of the screen. <br>\n",
+    "__`[link text](#section_ID)`__"
    ]
   },
   {
